--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="memo_section">Demos</string>
     <string name="reykjavik">Reyjavik</string>
     <string name="long_island">Long Island</string>
+    <string name="mapquest_api_key">Fmjtd%7Cluubn9u2nd%2C2a%3Do5-907wd6</string>
 </resources>
