--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="reykjavik">Reyjavik</string>
     <string name="long_island">Long Island</string>
     <string name="mapquest_api_key">Fmjtd%7Cluubn9u2nd%2C2a%3Do5-907wd6</string>
+    <string name="search_title">find stuff</string>
 </resources>
