refactoring to use the new place entity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="long_island">Long Island</string>
     <string name="mapquest_api_key">Fmjtd%7Cluubn9u2nd%2C2a%3Do5-907wd6</string>
     <string name="search_title">find stuff</string>
+    <string name="tag_viewholder">1</string>
+    <string name="tag_placeholder">2</string>
 </resources>
