--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="title_activity_vector_map">MainActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="tiles_source_url_key">url</string>
+    <string name="tiles_source_url">http://opensciencemap.org/tiles/vtm</string>
 
 </resources>
