--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="tiles_source_url_key">url</string>
     <string name="tiles_source_url">http://opensciencemap.org/tiles/vtm</string>
     <string name="pelias_test_suggest_url">http://api-pelias-test.mapzen.com/suggest/</string>
+    <string name="nominatim_base_url"><![CDATA[http://open.mapquestapi.com/nominatim/v1/search.php?format=json&q=]]></string>
 
 </resources>
