--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="pelias_test_suggest_url">http://api-pelias-test.mapzen.com/suggest</string>
     <string name="pelias_test_search_url">http://api-pelias-test.mapzen.com/search</string>
     <string name="generic_server_down">Server is down</string>
+    <string name="request_timed_out">Timeout error</string>
     <string name="no_internet">Device doesn\'t have connection</string>
     <string name="generic_error">something is up</string>
 </resources>
