--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="generic_error">something is up</string>
     <string name="start_route">lets go</string>
     <string name="route_next">Next</string>
-    <string name="view_all"><![CDATA[View All &#187;]]></string>
+    <string name="view_all">View All &#187;</string>
 </resources>
