moves routes display to pager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="application_name">Mapzen</string>
     <string name="results_activity_title">Results</string>
     <string name="search_title">find stuff</string>
@@ -11,5 +12,7 @@
     <string name="generic_error">something is up</string>
     <string name="start_route">lets go</string>
     <string name="route_next">Next</string>
-    <string name="view_all">View All &#187;</string>
+    <string name="view_all">View All »</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
