--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="route_previous">Prev</string>
     <string name="view_all">View All »</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="no_route_found">No Route Found</string>
 
 </resources>
