Full screen directions
* Adds "View steps" button to routing widget.
* Displays "Current Location" as first item in full direction list.
* Shows full direction list for route including turn icon and distance.
* Adds direction listener; notifies RouteFragment on list item click.
* Hides direction list fragment after selection is made.
* Smooth scrolls to selected instruction and shows on map.
* Updates geojson project to include simple instruction format.
* Manages back stack so only one instance of direction list is ever on the stack.
* Updates checkstyle config to be slightly more sane ;)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,7 @@
     <string name="view_all">View All »</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="no_route_found">No Route Found</string>
+    <string name="view_steps">View steps</string>
+    <string name="current_location">Current Location</string>
 
 </resources>
