--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="view_steps">View steps</string>
     <string name="current_location">Current Location</string>
     <string name="generic_server_error">Server Error</string>
+    <string name="progress_dialog_title">Loading</string>
+    <string name="progress_dialog_message">Wait while loading</string>
 
 </resources>
