--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="application_name">Mapzen</string>
-    <string name="results_activity_title">Results</string>
+    <string name="results_title">Results</string>
     <string name="search_title">find stuff</string>
     <string name="tiles_source_url_key">url</string>
     <string name="tiles_source_url">http://opensciencemap.org/tiles/vtm</string>
