--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,7 +11,6 @@
     <string name="request_timed_out">Timeout error</string>
     <string name="no_internet">Device doesn\'t have connection</string>
     <string name="generic_error">something is up</string>
-    <string name="start_route">lets go</string>
     <string name="route_next">Next</string>
     <string name="route_description">Turn Icon</string>
     <string name="route_previous">Prev</string>
@@ -23,5 +22,6 @@
     <string name="generic_server_error">Server Error</string>
     <string name="progress_dialog_title">Loading</string>
     <string name="progress_dialog_message">Wait while loading</string>
+    <string name="start">Start</string>
 
 </resources>
