--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="progress_dialog_title">Loading</string>
     <string name="progress_dialog_message">Wait while loading</string>
     <string name="start">Start</string>
+    <string name="overflow_menu">overflow</string>
+    <string name="route_steps_menu_option">Step-by-step list</string>
 
 </resources>
