--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="start">Start</string>
     <string name="overflow_menu">More</string>
     <string name="route_steps_menu_option">Step-by-step list</string>
+    <string name="waiting">Waiting for location</string>
 
     <!--Settings-->
 
