--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="no_internet">Device doesn\'t have connection</string>
     <string name="generic_error">something is up</string>
     <string name="route_description">Turn Icon</string>
+    <string name="route_resume_button">Resume</string>
     <string name="view_all">View All »</string>
     <string name="no_route_found">No Route Found</string>
     <string name="current_location">Current Location</string>
