Revert "making a our vector service the default and opens sci map selectable"
This reverts commit ab4718fdb9fb71ec2c8125948999347637674dc9.

Conflicts:
	res/values/arrays.xml
	res/values/strings.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="settings_key_walking_advance_radius">edittext_walking_advance_radius</string>
     <string name="settings_key_mapsource">edittext_mapsource</string>
     <string name="settings_default_mapsource">http://vector.test.mapzen.com/vector/lite</string>
+    <string name="settings_mapsource_dialog_title">Configure Map Tile source</string>
     <string name="settings_mapsource">Configure Tile server</string>
     <string name="settings_mapsource_summary">Restart required! And possibly flushing caches.</string>
     <string name="settings_voice_navigation_key">checkbox_voice_navigation</string>
