--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,5 +54,6 @@
     <string name="toast_fixed_location_is_malformed">Your fixed location is malformed</string>
     <string name="osm_login">OpenStreetMap Login</string>
     <string name="osm_logout">OpenStreetMap Logout</string>
+    <string name="osm_login_title">Please Authorize</string>
 
 </resources>
