--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,13 +51,13 @@
     <string name="settings_zoom_biking_key">zoom_biking</string>
     <string name="settings_zoom_biking_title">Biking</string>
     <string name="settings_zoom_driving_0to15_key">zoom_driving_0_to_15</string>
-    <string name="settings_zoom_driving_0_to_15_title">Driving 0-15 Mph</string>
+    <string name="settings_zoom_driving_0_to_15_title">Driving 0–15 Mph</string>
     <string name="settings_zoom_driving_15to25_key">zoom_driving_15_to_25</string>
-    <string name="settings_zoom_driving_15_to_25_title">Driving 15-25 Mph</string>
+    <string name="settings_zoom_driving_15_to_25_title">Driving 15–25 Mph</string>
     <string name="settings_zoom_driving_25to35_key">zoom_driving_25_to_35</string>
-    <string name="settings_zoom_driving_25_to_35_title">Driving 25-35 Mph</string>
+    <string name="settings_zoom_driving_25_to_35_title">Driving 25–35 Mph</string>
     <string name="settings_zoom_driving_35to50_key">zoom_driving_35_to_50</string>
-    <string name="settings_zoom_driving_35_to_50_title">Driving 35-50 Mph</string>
+    <string name="settings_zoom_driving_35_to_50_title">Driving 35–50 Mph</string>
     <string name="settings_zoom_driving_over50_key">zoom_driving_over_50</string>
     <string name="settings_zoom_driving_over_50_title">Driving 50+ Mph</string>
 
