--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="overflow_menu">More</string>
     <string name="route_steps_menu_option">Step-by-step list</string>
     <string name="waiting">Waiting for location</string>
+    <string name="recalculating">Recalculating</string>
 
     <!--Settings-->
 
