--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,6 +12,10 @@
     <string name="generic_server_error">Server Error</string>
     <string name="progress_dialog_title">Loading</string>
     <string name="progress_dialog_message">Wait while loading</string>
+    <string name="gps_dialog_title">GPS Disabled</string>
+    <string name="gps_dialog_message">The GPS on your device is disabled. Would you like to enable it for improved location accuracy?</string>
+    <string name="gps_positive_button">Yes</string>
+    <string name="gps_negative_button">Dismiss</string>
     <string name="start">Start</string>
     <string name="overflow_menu">More</string>
     <string name="route_steps_menu_option">Step-by-step list</string>
