--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -87,6 +87,9 @@
     <string name="osm_login">OpenStreetMap Login</string>
     <string name="osm_logout">OpenStreetMap Logout</string>
     <string name="osm_login_title">Please Authorize</string>
+    <string name="osm_init_login">Log in with Open Street Map</string>
+    <string name="osm_init_sign_up">Sign up with Open Street Map</string>
+    <string name="osm_sign_up_url">https://www.openstreetmap.org/user/new</string>
 
     <!--Debug Strings-->
 
