--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="search_title">Search</string>
     <string name="route_description">Turn Icon</string>
     <string name="route_resume_button">Resume</string>
-    <string name="view_all">View All »</string>
+    <string name="view_all">View All</string>
     <string name="no_route_found">No Route Found</string>
     <string name="current_location">Current Location</string>
     <string name="generic_server_error">Server Error</string>
