hides most menu items by default and exposes them through a secret search tearm

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -112,4 +112,6 @@
     <string name="destination_preview_distance">destination_preview_distance</string>
     <string name="reverse">reverse</string>
 
+    <string name="secret_phrase">yo!!!</string>
+
 </resources>
