--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="from_text">From:</string>
     <string name="to_text">To:</string>
     <string name="routing_to_text">To\u0020</string>
+    <string name="search_hint_icon_spacer">"   "</string>
+
     <!--Settings-->
 
     <string name="settings">Settings</string>
