--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="to_text">To:</string>
     <string name="routing_to_text">To\u0020</string>
     <string name="search_hint_icon_spacer">"   "</string>
+    <string name="osm_attribution">© OpenStreetMap</string>
 
     <!--Settings-->
 
