--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="view_all">VIEW ALL</string>
     <string name="no_route_found">No Route Found</string>
     <string name="current_location">Current Location</string>
-    <string name="generic_server_error">Server Error</string>
+    <string name="generic_server_error">An error occurred</string>
     <string name="progress_dialog_title">Loading</string>
     <string name="gps_dialog_title">GPS Disabled</string>
     <string name="gps_dialog_message">The GPS on your device is disabled. Would you like to enable it for improved location accuracy?</string>
