Fix search view after enabling debug settings via "yo!!!"
Using onPrepareOptionsMenu() to toggle visibility rather than inflating a new menu.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -123,5 +123,7 @@
     <string name="reverse">reverse</string>
 
     <string name="secret_phrase">yo!!!</string>
+    <string name="debug_settings_on">Debug settings on</string>
+    <string name="debug_settings_off">Debug settings off</string>
 
 </resources>
