--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -82,25 +82,7 @@
     <string name="settings_zoom_driving_over50_key">zoom_driving_over_50</string>
     <string name="settings_zoom_driving_over_50_title">Driving 50+ Mph</string>
 
-    <!--Advance Radius Settings-->
-
-    <string name="settings_turn_title">Advance Radius</string>
-    <string name="settings_turn_walking_key">turn_walking</string>
-    <string name="settings_turn_walking_title">Walking</string>
-    <string name="settings_turn_biking_key">turn_biking</string>
-    <string name="settings_turn_biking_title">Biking</string>
-    <string name="settings_turn_driving_0to15_key">turn_driving_0_to_15</string>
-    <string name="settings_turn_driving_0_to_15_title">Driving 0–15 Mph</string>
-    <string name="settings_turn_driving_15to25_key">turn_driving_15_to_25</string>
-    <string name="settings_turn_driving_15_to_25_title">Driving 15–25 Mph</string>
-    <string name="settings_turn_driving_25to35_key">turn_driving_25_to_35</string>
-    <string name="settings_turn_driving_25_to_35_title">Driving 25–35 Mph</string>
-    <string name="settings_turn_driving_35to50_key">turn_driving_35_to_50</string>
-    <string name="settings_turn_driving_35_to_50_title">Driving 35–50 Mph</string>
-    <string name="settings_turn_driving_over50_key">turn_driving_over_50</string>
-    <string name="settings_turn_driving_over_50_title">Driving 50+ Mph</string>
-
-    <string name="settings_speed_title">Advance Radius</string>
+    <string name="settings_speed_title">Average Speed</string>
     <string name="settings_number_of_locations_for_average_speed_key">number_of_locations_for_average_speed</string>
     <string name="settings_number_of_locations_for_average_speed_title">Number of Location for average speed</string>
 
