--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="search_hint_icon_spacer">"   "</string>
     <string name="osm_attribution">© OpenStreetMap</string>
     <string name="no_network">Network connection unavailable</string>
+    <string name="you_have_arrived_at">You have arrived at</string>
 
     <!--Settings-->
 
