--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,9 +31,9 @@
     <string name="you_have_arrived_at">You have arrived at</string>
 
     <!--Login-->
-    <string name="login_page_two_title">Hi, you just opened Open.</string>
+    <string name="login_page_two_title">Hi, \n you just opened Open.</string>
     <string name="login_page_two_body">Open is a search and navigation app built on open source software and open data. One of those open data sources we’re using is OpenStreetMap. This is not an OSM editor app, but we’re asking users to log in using an OpenStreetMap account.</string>
-    <string name="login_page_three_title">No tracking. Just tracing.</string>
+    <string name="login_page_three_title">No tracking. \n Just tracing.</string>
     <string name="login_page_three_body">Once you’ve logged into your OSM account, you’ll be given the option to let Open collect GPS traces from your phone when it’s in Navigation Mode. Other than this optional collection, Open doesn’t log any of your location data. (Seriously. Nothing.)</string>
     <string name="login_page_three_learn_more">Learn more</string>
     <string name="login_page_four_body">Sign up or log in with OpenStreetMap to get started.</string>
